thêm controller booking và thêm trường img cho tour
